# MuseScore

./: .gitignore  ARCHITECTURE.md  BUILD_AND_TEST.md  CLAUDE.md  CMakeLists.txt  REFACTOR_DEDUPLICATION_PLAN.md  STATUS.md  build_composing.bat  build_musescore.bat  build_notation.bat  build_notationscene.bat  setup_and_build.bat  setup_and_build_fast.bat
.claude/: settings.json
docs/: chordlist_bug_report.md  divergence_c_observation.md  divergence_d_recon.md  extension_stripping_policy.md  format_symbol_audit.md  llm_triage_cost_log.md  mismatch_classification.md  musescore_parser_special_notations_recon.md  phase4_recon.md  (+8 more)
src/composing/: CMakeLists.txt  analyzed_section.h  composingconfiguration.cpp  composingconfiguration.h  composingmodule.cpp  composingmodule.h  icomposinganalysisconfiguration.h  icomposingchordstaffconfiguration.h  icomposingconfiguration.h
src/composing/analysis/: CMakeLists.txt  analysisutils.h  chordanalyzer.cpp  chordanalyzer.h  harmonicrhythm.h  keymodeanalyzer.cpp  keymodeanalyzer.h  keymodeguesser.cpp  keymodeguesser.h
src/composing/analysis/chord/: analysisutils.h  chordanalyzer.cpp  chordanalyzer.h
src/composing/analysis/key/: keymodeanalyzer.cpp  keymodeanalyzer.h
src/composing/analysis/region/: harmonicrhythm.h
src/composing/intonation/: CMakeLists.txt  equal_temperament.h  just_intonation.h  kirnberger.h  pythagorean.h  quarter_comma_meantone.h  tuning_keys.h  tuning_registry.cpp  tuning_system.h  tuning_utils.h  werckmeister.h
src/composing/tests/: CMakeLists.txt  chord_analysis_test.musicxml  chord_analysis_test.py  chord_analysis_test_expected.json  chord_mismatch_report.txt  chordanalyzer_musicxml_tests.cpp  chordanalyzer_tests.cpp  comparison_utils.h  comparison_utils_tests.cpp  environment.cpp  keymodeanalyzer_tests.cpp  keymodeguesser_tests.cpp  synthetic_tests.cpp  test_helpers.h  tuning_tests.cpp  verify_chord_track.py
src/composing/tests/data/: chordanalyzer_catalog.musicxml  chordanalyzer_context.musicxml  francis-poulenc-o-magnum-mysterium.mxl  jazz_smoke_test.mscx  mono_smoke_test.mscx  mono_smoke_test.musicxml  organ-sonata-n1-in-e-flat-major-bwv-525-i-allegro.mxl  solid theory.musicxml
src/composing/tests/scores/: clair-de-lune-claude-debussy.mxl  jesu-meine-freude-bwv-227-johann-sebastian-bach.mxl  like-someone-in-love-bill-evans.mxl  piston examples.musicxml  slask Tillägnan SMzATB.mxl  slask you must believe in spring SMATB.mxl  xxxxx.mxl
tools/: CMakeLists.txt  REPRODUCIBILITY.md  analyze_inversion_errors.py  analyze_pdmx.py  arriving_soon_test.json  batch_analyze.cpp  check_parity.py  compare_analyses.py  compare_bach_wir.py  compare_omnibook.py  compare_when_in_rome.py  corpus_registry.json  dcml_parser.py  extra_scores_registry.json  filter_effendi.py  fix_keysig.py  grieg_modal_diagnostic.py  inject_m21_rn.py  music21_batch.py  pdmx_jazz_candidates.py  pdmx_spot_check.py  run_bach_preset.py  run_bach_suites_validation.py  run_beethoven_validation.py  run_chopin_validation.py  run_corelli_validation.py  run_cpe_bach_validation.py  run_dvorak_validation.py  run_grieg_validation.py  run_mozart_validation.py  run_schumann_validation.py  run_tchaikovsky_validation.py  run_validation.py  section_7_3_diagnostic.py  test_batch_analyze_regressions.py  test_dcml_parser.py  wir_test.json
tools/extra scores/: 500-miles-high-chick-corea-500-miles-high-by-chick-corea-arr-mark-taylor.mscz  Black_and_blues.mscz  Can_You_Feel_the_Love_Tonight_-_Pentatonix_Full_Sheet_Music_with_Lyrics.mscz  Cant_Help_Falling_In_Love_-_Pentatonix_Full_Sheet_Music_w_Lyrics (1).mscz  Daft_Punk_-_Pentatonix_satb.mscz  Dolores_In_a_Shoestand__Esbjrn_Svensson_Trio.mscz  Esbjrn_Svensson_Trio_-_Waltz_For_The_Lonely_Ones.mscz  God_Only_Knows_2.mscz  Imagine pentaversion.mscz  Mad_World.mscz  Mingle_in_the_Mincing-Machine__Esbjrn_Svensson_Trio.mscz  Not_like_this_5 efter accent.mscz  Over_The_Rainbow.mscz  Take_Me_Home_-_Pentatonix.mscz  The_Sound_of_Silence.mscz  Waltz for the lonely ones - unrolled.mscz  after-all-al-jarreaudavid-fosterjay-graydon.mscz  after-youve-gone-jimin-park.mscz  answer-me-my-love-gerhard-winkler-fred-rauch-originally-performed-by-nat-king-cole.mscz  armageddon-wayne-shorter.mscz  be-my-love-keith-jarrett.mscz  beatrice-brad-mehldau-transcription.mscz  better-than-anything-natalie-cole-diana-krallwheat-loughborough-duet-arrfor-big-band.mscz  bill-evans-trio-how-my-heart-sings.mscz  bill-evans-waltz-for-debby-medium.mscz  billy-boy-red-garland.mscz  blue-in-green-bill-evansmiles-davis.mscz  blue-in-green-miles-davis-bill-evans-full-piano-transcription.mscz  blue-monk-thelonious-monk-blue-monk-thelonious-monk.mscz  bluesette.mscz  boplicity-be-bop-lives-miles-davis-and-gil-evans-boplicity.mscz  bridge-over-troubled-water-jacob-collier-transcription.mscz  cantaloupe-island-herbie-hancock.mscz  caravan-piano-arrangement.mscz  chief-crazy-horse-piano-solo.mscz  chloe-meets-gerschwin-michel-petrucciani.mscz  chloe-meets-gershwin-michel-petrucciani.mscz  danny-boybill-evans-ver.mscz  dat-dere-art-blakey-the-jazz-messengers.mscz  donna-lee.mscz  (+64 more)
tools/extra scores/Steely dan/: Aja_-_Steely_Dan.mscz  Babylon sisters Steely a cappella.mscz  Black Cow Steely a cappella.mscz  Black_Cow_-_Steely_Dan.mscz  IGY.mscz  Maxine Donald Fagen Steely a cappella.mscz  Maxine__Donald_Fagen.mscz  Peg Steely a cappella.mscz  Peg_-_Steely_Dan.mscz  Reelin_In_The_Years_-_Steely_Dan.mscz  aja-steely-dan.mscz  deacon-blues-steely-dan.mscz  fm-steely-dan.mscz  glamour-profession-steely-dan.mscz  home-at-last.mscz  igy-what-a-beautiful-world-steely-dan.mscz  jackofspeed.mscz  night by night.mscz  peg-by-steely-dan.mscz  steely-dan-jack-of-speed.mscz  the-caves-of-altamira-steely-dan.mscz  true-companion-donald-fagen-steely-dan-piano-voice-guitar.mscz
tools/extra scores/piazzolla/: Adios Nonino.mscz  Invierno porteño.mscz  Oblivion.mscz  Tanti Anni Prima Ensemble SLUTGILTIG.mscz  Vesper.mscz  chiquilin de bachin.mscz
tools/llm_triage/: CMakeLists.txt  README.md  compare_triage.py  convert_music21_ground_truth.py  llm_triage.cpp  run_triage.py
(+82 files in other folders)
